- fixed render bug in IE 7 page /mitglieder - fixed render bug in IE 7 where a horizontal gap has been displayed between header image and horizontal navigation bar @ see wp-content/themes/mccm/header.php override ... explanation: in revision 8 "search-box" in header has been removed to get place for registration counter. It seems like at least an empty div is needed (also if box is knocked out in parent theme only and nothing else is added) to get rendered correctly in IE7
- this commit includes some images which should be allready committed in revision 9

git-svn-id: svn://localhost/websites/mccm_wordpress/trunk@10 553ebd90-c899-744e-a329-2f02278a15cf

--- a/wp-content/themes/mccm/style.css
+++ b/wp-content/themes/mccm/style.css
@@ -12,7 +12,6 @@ Version: 1.0.0
 .hentry { padding: 0px !important; }
 .entry-title { font-size: 30px !important; line-height: 30px !important; }
 #page { margin: 0em auto !important }
-/* .mccm-coloring { color: #9eae94; } */
 .mccm-coloring { color: #336633; }
 .mccm-list-style { list-style-type: disc; }
 
@@ -34,7 +33,6 @@ Version: 1.0.0
  /* registration flash counter */
  #reg-counter-div { display: none; }
  #mccm_countdown { position: absolute; right: 2%; top: 290px; max-width: 280px; }
-
 
 /* all driver registration pages  */
 .reg-fs-driver { border: 1px solid #000; margin: 5px; padding: 5px; width: 100%; }
@@ -67,8 +65,9 @@ Version: 1.0.0
 .management-info { vertical-align: bottom !important; padding-bottom: 1.625em !important; }
 
 /* page mitglieder */
-.member-overview { width: 220px; overflow: hidden; }
-.member-overview > span { float: right; font-weight: bold; display: inline;  }
+.member-overview-table { width: 200px !important; margin: 0em 0em 0.8em 0em !important; }
+.member-overview-table > tbody > tr > td { padding: 0px !important; }
+.member-overview-second-td { text-align: right; font-weight: bold; }
 .member-table tbody > tr > td > span { font-weight: bold; }
 
 /* page history, links */
@@ -120,5 +119,5 @@ Version: 1.0.0
 /* detected render bugs: 
 - IE 8 -> zeitungsartikel - fixed in common css section
 - IE 8 -> img kontakt - fixed in common css section
-- IE 7 -> mitglieder 
-- IE 7 -> horizontal navigation white gap at the top */
+- IE 7 -> mitglieder - fixed in revision 10 
+- IE 7 -> horizontal navigation white gap at the top - fixed in revision 10 */
